--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ authors = ["klangner <klangner@gmail.com>"]
 
 [dependencies]
 rtlsdr = "0.1.4"
+audrey = "0.1.0"
+dsp = { git = "https://github.com/klangner/dsp" }
